Attempt to reduce the number of pages.

--- a/answers.tex
+++ b/answers.tex
@@ -119,7 +119,7 @@ In Page 3, the formula for $runtime_l$, $t_2$ and $t_3$ have no data dependency,
 I'd like to see more description on the workflow execution traces instead of just citing two papers.
 \end{review}
 
-\answer{\todo{}}
+\answer{The traces are used to feed the Workflow Generator toolkit to create synthetic workflows. Due to space constraint, we provide a summary of the main characteristics of these traces on Tables 1 (added in this revised version) and 3. In addition, we provided a reference (\url{http://workflowarchive.org}) to where all traces, profile data, and the workflow generator are freely available.}
 
 
 
