--- a/biblio.bib
+++ b/biblio.bib
@@ -88,7 +88,7 @@
 
 @INPROCEEDINGS{Plankensteiner2009, 
 author={Plankensteiner, K. and Prodan, R. and Fahringer, T.}, 
-booktitle={Fifth IEEE International Conference on e-Science (e-Science '09)}, 
+booktitle={5th IEEE International Conference on e-Science (e-Science '09)}, 
 title={A New Fault Tolerance Heuristic for Scientific Workflows in Highly Distributed Environments Based on Resubmission Impact}, 
 year={2009}, 
 month={Dec}, 
@@ -328,7 +328,7 @@ address = {Los Alamitos, CA, USA},
 
 @INPROCEEDINGS{Meinl2008, 
 author={Meinl, T.}, 
-booktitle={E-Commerce Technology and the Fifth IEEE Conference on Enterprise Computing, E-Commerce and E-Services, 2008 10th IEEE Conference on}, title={Advance Reservation of Grid Resources via Real Options}, 
+booktitle={E-Commerce Technology and the 5th IEEE Conference on Enterprise Computing, E-Commerce and E-Services, 2008 10th IEEE Conference on}, title={Advance Reservation of Grid Resources via Real Options}, 
 year={2008}, 
 pages={3-10}, 
 }
@@ -809,7 +809,7 @@ pages={86-93},
 
 @inproceedings{Maheshwari2012,
  title = {Job and data clustering for aggregate use of multiple production cyberinfrastructures},
- booktitle = {fifth international workshop on Data-Intensive Distributed Computing Date},
+ booktitle = {5th international workshop on Data-Intensive Distributed Computing},
  year = {2012},
  author = {Maheshwari, Ketan and Espinosa, Allan and Katz, Daniel S. and Wilde, Michael and Zhang, Zhao and Foster, Ian and Callaghan, Scott and Maechling, Phillip},
 
