Attempt to reduce the number of pages.

--- a/biblio.bib
+++ b/biblio.bib
@@ -3069,3 +3069,9 @@ pages={23-30},
     title = {{Workflow Archive}},
     howpublished = {\url{http://workflowarchive.org}}
 },
+
+@misc{argmax,
+	key = {{Arg max}},
+	title = {{Arg max}},
+	howpublished = {\url{http://en.wikipedia.org/wiki/Arg\_max}}
+}
