Attempt to reduce the number of pages.

--- a/biblio.bib
+++ b/biblio.bib
@@ -30,7 +30,7 @@
 
 @inproceedings{yigitbasi2010analysis,
   title={Analysis and modeling of time-correlated failures in large-scale distributed systems},
-  booktitle={2010 11th IEEE/ACM International Conference on Grid Computing (GRID)},
+  booktitle={11th Inter. Conf. on Grid Computing},
   pages={65--72},
   year={2010},
   author={Yigitbasi, Nezih and Gallet, Matthieu and Kondo, Derrick and Iosup, Alexandru and Epema, Dick},
@@ -64,7 +64,7 @@
 
 @inproceedings{schuller2008chemomentum,
   title={Chemomentum-UNICORE 6 based infrastructure for complex applications in science and technology},
-  author={Schuller, Bernd and Demuth, Bastian and Mix, Hartmut and Rasch, Katharina and Romberg, Mathilde and Sild, Sulev and Maran, Uko and Ba{\l}a, Piotr and Del Grosso, Enrico and Casalegno, Mos{\'e} and others},
+  author={Schuller, Bernd and Demuth, Bastian and Mix, Hartmut and Rasch, Katharina and Romberg, Mathilde and others},
   booktitle={Euro-Par 2007 Workshops: Parallel Processing},
   pages={82--93},
   year={2008},
@@ -96,7 +96,7 @@ pages={313-320},
 }
 
 @MISC{BLAST,
- title={Basic Local Alignment Search Tools},
+ title={{BLAST}},
  howpublished={\url{http://blast.ncbi.nlm.nih.gov/Blast.cgi}},
  key = {Basic Local Alignment Search Tools},
 }
@@ -123,8 +123,7 @@ pages={14},
 @inproceedings{Iosup2008,
  author = {Iosup, Alexandru and Sonmez, Ozan and Anoep, Shanny and Epema, Dick},
  title = {The Performance of Bags-of-tasks in Large-scale Distributed Systems},
- booktitle = {17th International Symposium on High Performance Distributed Computing},
- series = {HPDC '08},
+ booktitle = {17th Inter. Symp. on High Performance Distributed Computing},
  year = {2008},
  pages = {97--108},
 } 
@@ -723,9 +722,8 @@ pages={86-93},
 @INPROCEEDINGS{4493929,
   author = {Muthuvelu, N. and Chai, I. and Eswaran, C.},
   title = {An Adaptive And Parameterized Job Grouping Algorithm For Scheduling Grid Jobs},
-  booktitle = {10th International Conference on Advanced Communication Technology (ICACT 2008)},
+  booktitle = {10th Inter. Conf. on Advanced Communication Technology},
   year = {2008},
-  volume = {2},
   pages = {975 -980},
   issn = {1738-9445}
 }
@@ -809,7 +807,7 @@ pages={86-93},
 
 @inproceedings{Maheshwari2012,
  title = {Job and data clustering for aggregate use of multiple production cyberinfrastructures},
- booktitle = {5th international workshop on Data-Intensive Distributed Computing},
+ booktitle = {5th Inter. workshop on Data-Intensive Distributed Computing},
  year = {2012},
  author = {Maheshwari, Ketan and Espinosa, Allan and Katz, Daniel S. and Wilde, Michael and Zhang, Zhao and Foster, Ian and Callaghan, Scott and Maechling, Phillip},
 
@@ -1225,7 +1223,7 @@ pages={389 -400},
 @inproceedings{Abrishami2010,
     author = {Abrishami, Saeid and Naghibzadeh, Mahmoud and Epema, Dick},
     title = {Cost-driven Scheduling of Grid Workflows Using Partial Critical Paths},
-    booktitle = {11th {IEEE/ACM} International Conference on Grid Computing},
+    booktitle = {11th {IEEE/ACM} Inter. Conf. on Grid Computing},
     year = {2010}
 }
 
@@ -1318,7 +1316,7 @@ pages={389 -400},
 },
 
 @inproceedings{Berriman2004,
-    author = {Berriman, G. B. and Deelman, Ewa and Good, John C. and Jacob, Joseph C. and Katz, Daniel S. and Kesselman, Carl and Laity, Anastasia C. and Prince, Thomas A. and Singh, Gurmeet and Su, {Mei-Hu}},
+    author = {Berriman, G. B. and Deelman, Ewa and Good, John C. and Jacob, Joseph C. and Katz, Daniel S. and Kesselman, Carl and others},
     title = {Montage: a grid-enabled engine for delivering custom science-grade mosaics on demand},
     booktitle = {{SPIE Conference on Astronomical Telescopes and Instrumentation}},
     month = jun,
@@ -1874,8 +1872,8 @@ ISSN={1045-9219},},
 },
 
 @article{Graves2010, 
-    title = {{CyberShake: A Physics-Based Seismic Hazard Model for Southern California}}, 
-    author = {Robert Graves and Thomas Jordan and Scott Callaghan and Ewa Deelman and Edward Field and Gideon Juve and Carl Kesselman and Philip Maechling and Gaurang Mehta and Kevin Milner and David Okaya and Patrick Small and Karan Vahi},
+    title = {CyberShake: A Physics-Based Seismic Hazard Model for Southern California}, 
+    author = {Robert Graves and Thomas Jordan and Scott Callaghan and Ewa Deelman and Edward Field and others},
     journal = {Pure and Applied Geophysics}, 
     volume = {168}, 
     number = {3-4},
@@ -2195,7 +2193,7 @@ ISSN={1045-9219},},
 
 @misc{LIGO,
     key = {Laser Interferometer Gravitational Wave Observatory},
-    title = {{Laser Interferometer Gravitational Wave Observatory (LIGO)}},
+    title = {{LIGO}},
     howpublished = {\url{http://www.ligo.caltech.edu}}
 },
 
@@ -2393,7 +2391,7 @@ ISSN={1045-9219},},
 @inproceedings{Nurmi2008,
     author = {Nurmi, Daniel and Wolski, Rich and Brevik, John},
     title = {{VARQ:} virtual advance reservations for queues},
-    booktitle = {17th International Symposium on High Performance Distributed Computing {(HPDC} '08)},
+    booktitle = {17th Inter. Symp. on High Performance Distributed Computing},
     year = {2008}
 },
 
@@ -2949,7 +2947,6 @@ pages={23-30},
 	number = "3",
 	pages = "682 - 692",
 	year = "2013",
-	note = "Special Section: Recent Developments in High Performance Computing and Security",
 	author = "Gideon Juve and Ann Chervenak and Ewa Deelman and Shishir Bharathi and Gaurang Mehta and Karan Vahi",
 }
 
@@ -3023,7 +3020,6 @@ pages={23-30},
 	title={Combined Fault Tolerance and Scheduling Techniques for Workflow Applications on Computational Grids},
 	year={2009},
 	pages={244-251},
-	doi={10.1109/CCGRID.2009.59},
 }
 
 @INPROCEEDINGS{5671856,
@@ -3036,7 +3032,7 @@ pages={23-30},
 
 @INPROCEEDINGS{4534303,
 	author={Kandaswamy, G. and Mandal, A. and Reed, D.A.},
-	booktitle={Cluster Computing and the Grid, 2008. CCGRID '08. 8th IEEE International Symposium on},
+	booktitle={8th IEEE Inter. Symp. on Cluster Computing and the Grid, 2008},
 	title={Fault Tolerance and Recovery of Scientific Workflows on Computational Grids},
 	year={2008},
 	pages={777-782},
